--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
+[build-system]
+requires = ["setuptools>=75", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [project]
 name = "plotty"
 version = "0.0.1"
@@ -15,14 +22,12 @@ dependencies = [
 [project.optional-dependencies]
 vpype = ["vpype>=1.14.0"]
 axidraw = ["pyaxidraw>=3.0.2"]
-dev = ["pytest>=8.3.2", "pre-commit>=3.8.0"]
+dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]
 
 [project.scripts]
 plotty = "plotty.cli:app"
 plottyd = "plotty.daemon:main"
 
-[tool.pytest.ini_options]
-addopts = "-q"
-
-[tool.black]
-line-length = 100
+[tool.uv]
+# optional but nice for consistency
+default-groups = ["dev"]
