feat: implement paper configuration and enhanced guard system
- Add PaperSize enum with 13 standard sizes (A0-A6, LETTER, LEGAL, etc.)
- Add PaperCfg configuration class with session tracking
- Add PaperSessionGuard and PenLayerGuard classes
- Add CLI paper management commands (paper-list, paper-add, paper-remove)
- Enhance plotting with AxiDraw native layer control
- Fix linting issues and code quality
- Add crash recovery, multipen, and reporting modules
- Update configuration with paper settings
- Integrate guards into FSM system

All tests pass and core functionality verified.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
 [project.optional-dependencies]
 vpype = ["vpype>=1.14.0"]
 # NOTE: EMS API is distributed as a zip; import name is `pyaxidraw`
-axidraw = ["axidraw @ https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip"]
+axidraw = ["pyaxidraw @ https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip"]
 dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]
 
 [dependency-groups]
