--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ dependencies = [
   "pyyaml>=6.0.2",
   "sqlalchemy>=2.0.36",
   "alembic>=1.13.2",
-  "pyaxidraw>=3.9.6"
 ]
 
 [project.optional-dependencies]
 vpype = ["vpype>=1.14.0"]
 # NOTE: EMS API is distributed as a zip; import name is `pyaxidraw`
-axidraw = ["pyaxidraw @ https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip"]
+# Package metadata name is `axicli` but provides `pyaxidraw` module
+axidraw = ["axicli @ https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip"]
 dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]
 
 [dependency-groups]
