Refactor vpype presets: dynamic paper sizing & better naming
- Rename multipen-fast → fast (simpler, more accurate)
- Add hq preset with linesimplify for high quality
- Make presets use dynamic paper size from config
- Remove hardcoded page sizes from presets
- Add {pagesize}, {width_mm}, {height_mm} placeholders
- Update planner to accept paper_size parameter
- Move test files to tests/ directory
- Fix linting issues in core files
- Add dashboard.py with interactive terminal interface
- Update README with dynamic preset documentation

Presets now work with any paper size (A4, A3, Letter, etc.)
without needing separate a3_fast, a4_fast, etc.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ workspace: ./workspace
 database: { url: "sqlite:///./plotty.db", echo: false }
 camera: { mode: ip, url: "http://127.0.0.1:8881/stream.mjpeg", enabled: true, timelapse_fps: 1 }
 device: { preferred: "axidraw:auto", pause_ink_swatch: true }
-vpype:  { preset: multipen-fast, presets_file: "config/vpype-presets.yaml" }
+vpype:  { preset: fast, presets_file: "config/vpype-presets.yaml" }
 paper: { default_size: A4, default_margin_mm: 10, default_orientation: portrait, require_one_per_session: true, track_usage: true }
 
 hooks:
