--- a/config/vpype-presets.yaml
+++ b/config/vpype-presets.yaml
@@ -1,9 +1,6 @@
 presets:
-multipen-fast:
-pipe: |
-read {src}
-pagesize A3
-crop 0 0 297 420
-linemerge
-linesort
-write {dst}
+  fast:
+    pipe: "read {src} pagesize {pagesize} crop 0 0 {width_mm:g}mm {height_mm:g}mm linemerge linesort write {dst}"
+  
+  hq:
+    pipe: "read {src} pagesize {pagesize} crop 0 0 {width_mm:g}mm {height_mm:g}mm linemerge linesort linesimplify write {dst}"
