feat: implement comprehensive ploTTY database system
- Add SQLAlchemy database models (Pen, Paper, Device, Job, Layer)
- Implement session management with proper context handling
- Add pen/paper CRUD commands with green default highlighting
- Implement status commands with rich formatting
- Add job ID autocomplete and shorter 6-character IDs
- Simplify 'plotty status' to show system overview directly
- Add centralized error handling and progress indicators
- Fix import structure and session binding issues

Database Features:
- pen-list, pen-add, pen-remove with autocomplete
- paper-list, paper-add, paper-remove with defaults
- status status/queue/job commands with rich tables
- Shorter job IDs (6 chars vs 12 chars) with tab completion
- Green highlighting for default items

Technical Improvements:
- Proper SQLAlchemy models with relationships
- Session context managers for database safety
- Rich console output with colors and formatting
- Autocomplete support for all job ID parameters
- Backward compatibility with existing 12-char IDs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "pyyaml>=6.0.2",
   "sqlalchemy>=2.0.36",
   "alembic>=1.13.2",
+  "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
