fix: improve .gitignore to exclude build artifacts
- Remove tracked .egg-info/ files (build artifacts)
- Add comprehensive Python ignore patterns
- Exclude __pycache__, *.pyc, *.egg-info directories
- Add common development artifacts (.pytest_cache, .coverage, etc.)

Build artifacts should be generated during installation, not tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
-**pycache**/
-*.pyc
+__pycache__/
+*.py[cod]
+*$py.class
 .env
 .venv/
 dist/
 workspace/
 plotty.db
 .alembic/
+*.egg-info/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.mypy_cache/
+.dmypy.json
+dmypy.json
