Reorganize repository structure for better maintainability
- Move PKGBUILD to packaging/ alongside other distribution files
- Move install_pyaxidraw.sh to scripts/ for better categorization
- Move test_design.svg to tests/fixtures/ as test asset
- Move systemd/ to packaging/systemd/ with other deployment files
- Remove bandit-report.json and add to .gitignore
- Update PKGBUILD paths to reflect new systemd location
- All tests passing after reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -133,9 +133,10 @@ _temp/
 *.jsonl
 *.mp4
 *.html
+bandit-report.json
+coverage.xml
 !config/config.yaml
 !config/vpype-presets.yaml
-!test_design.svg
-!systemd/
+!tests/fixtures/test_design.svg
 !packaging/
 !alembic.ini
