Clean up development artifacts and improve .gitignore
- Remove untracked database files (plotty.db, workspace/plotty.db)
- Remove empty backups/ directory
- Clean up cache directories (.ruff_cache, .pytest_cache)
- Add comprehensive cache patterns to .gitignore
- All tests passing after cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,12 @@ _temp/
 *.html
 bandit-report.json
 coverage.xml
+backups/
+.ruff_cache/
+.pytest_cache/
+.mypy_cache/
+.dmypy.json
+.dmypy.json
 !config/config.yaml
 !config/vpype-presets.yaml
 !tests/fixtures/test_design.svg
