Implement proper user data directory structure
- Add platformdirs dependency for cross-platform user directories
- Update config to use ~/.local/share/plotty/ for user data
- Move workspace, logs, backups, database to user data directory
- Update config loading to resolve relative paths properly
- Maintain backward compatibility with existing config.yaml
- All tests passing with new directory structure

This allows ploTTY to be properly installed system-wide while keeping
user data in appropriate XDG-compliant directories.

--- a/.gitignore
+++ b/.gitignore
@@ -123,8 +123,10 @@ dmypy.json
 .pyre/
 
 # ploTTY specific
+# User data directories (created in ~/.local/share/plotty/)
 workspace/
 logs/
+backups/
 _temp/
 *.db
 *.sqlite
@@ -134,7 +136,6 @@ _temp/
 *.html
 bandit-report.json
 coverage.xml
-backups/
 .ruff_cache/
 .pytest_cache/
 .mypy_cache/
