--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,16 @@ description = "ploTTY: FSM plotter manager (headless-first) with vpype + per-ses
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-  "typer>=0.12.3",
-  "pydantic>=2.9",
-  "pyyaml>=6.0.2",
-  "sqlalchemy>=2.0.36",
-  "alembic>=1.13.2",
-  "rich>=13.0.0",
+    "typer>=0.12.3",
+    "pydantic>=2.9",
+    "pyyaml>=6.0.2",
+    "sqlalchemy>=2.0.36",
+    "alembic>=1.13.2",
+    "rich>=13.0.0",
+    "jinja2>=3.1.0",
+    "psutil>=5.9.0",
+    "click>=8.0.0",
+    "platformdirs>=4.0.0",
 ]
 
 [project.optional-dependencies]
