--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
-workspace: ./workspace
-database: { url: "sqlite:///./plotty.db", echo: false }
+workspace: ~/.local/share/plotty/workspace
+database: { url: "sqlite:///~/.local/share/plotty/plotty.db", echo: false }
 camera: { mode: ip, url: "http://127.0.0.1:8881/stream.mjpeg", enabled: true, timelapse_fps: 1 }
 device: { preferred: "axidraw:auto", pause_ink_swatch: true }
 vpype:  { preset: fast, presets_file: "config/vpype-presets.yaml" }
