--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "psutil>=5.9.0",
     "click>=8.0.0",
     "platformdirs>=4.0.0",
+    "defusedxml>=0.7.1",
 ]
 
 [project.optional-dependencies]
