Fix CI/CD: install AxiDraw support for testing using installer script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
           uv pip install -e ".[dev,vpype]"
           # Install pytest-cov separately for coverage
           uv pip install pytest-cov
+          # Install AxiDraw support for testing
+          bash scripts/install_pyaxidraw.sh
           
       - name: Run database migrations
         run: |
