--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,6 +124,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, build]
     if: github.event_name == 'release' && github.event.action == 'published'
+    permissions:
+      id-token: write
     
     steps:
       - name: Checkout code
