Add CLI entry point to pyproject.toml
- Add [project.scripts] section with plotty = plotty.cli:main
- Add main() function to CLI module
- Fixes 'command not found: plotty' after package installation
- Entry point now properly included in wheel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ vpype = ["vpype>=1.14.0"]
 axidraw = ["axicli @ https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip"]
 dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]
 
+[project.scripts]
+plotty = "plotty.cli:main"
+
 [dependency-groups]
 dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]
 vpype = ["vpype>=1.14.0"]
