Fix pipx dependency name for Arch Linux
- Use 'python-pipx' instead of 'pipx' for proper Arch package naming

--- a/packaging/PKGBUILD
+++ b/packaging/PKGBUILD
@@ -23,7 +23,7 @@ depends=(
   'python-pillow'
   'python-matplotlib'
   'python-pandas'
-  'pipx'
+  'python-pipx'
 )
 makedepends=(
   'python-build'
