--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,8 @@
-workspace: /home/bk/.local/share/plotty/workspace
-database: { url: "sqlite:///~/.local/share/plotty/plotty.db", echo: false }
+workspace: ~/.local/share/plotty/workspace
+database: { url: "sqlite:///$HOME/.local/share/plotty/plotty.db", echo: false }
 camera: { mode: ip, url: "http://127.0.0.1:8881/stream.mjpeg", enabled: true, timelapse_fps: 1 }
 device: { preferred: "axidraw:auto", pause_ink_swatch: true }
-vpype:  { preset: fast, presets_file: "config/vpype-presets.yaml" }
+vpype:  { preset: fast, presets_file: "$HOME/.local/share/plotty/config/vpype-presets.yaml" }
 paper: { default_size: A4, default_margin_mm: 10, default_orientation: portrait, require_one_per_session: true, track_usage: true }
 
 hooks:
