feat: Implement FSM-based job addition with proper state transitions
- Replace manual state setting with proper FSM transitions
- Add NEW -> QUEUED -> ANALYZED -> OPTIMIZED -> READY flow for normal jobs
- Add NEW -> QUEUED flow for pristine mode jobs
- Update config with enhanced hooks and missing sections
- Add environment variable expansion for workspace paths
- Add default vpype preset and fix config paths
- Ensure proper hook execution for all FSM states
- Add comprehensive error handling with FAILED state transitions

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include CHANGELOG.md
 include RELEASE_NOTES.md
 include *.yaml
 include *.yml
+recursive-include config *.yaml
 recursive-include src/plotty *.py
 recursive-include completions *
 recursive-include packaging *
