refactor: Implement consistent FSM flow where all jobs end in QUEUED
- Update FSM transitions: NEW can go to ANALYZED or QUEUED
- Update FSM transitions: OPTIMIZED goes to QUEUED instead of READY
- Update FSM transitions: QUEUED goes to READY for device assignment
- Update add functions: Normal jobs use NEW → ANALYZED → OPTIMIZED → QUEUED
- Update add functions: Pristine jobs use NEW → QUEUED
- Update config hooks: Reflect new state meanings with clearer messages
- Create consistent semantic meaning: QUEUED = 'ready for next step'

This creates a cleaner FSM where:
- Normal jobs: NEW → ANALYZED → OPTIMIZED → QUEUED (ready for plotting)
- Pristine jobs: NEW → QUEUED (ready for plotting)
- Device assignment: QUEUED → READY (ready for device assignment)

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -27,9 +27,9 @@ hooks:
   OPTIMIZED:
     - command: "echo '⚡ Optimization completed for job {job_id}'"
   QUEUED:
-    - command: "notify-send 'ploTTY: Job {job_id} queued and ready for processing'"
+    - command: "notify-send 'ploTTY: Job {job_id} queued and ready for plotting'"
   READY:
-    - command: "echo '✅ Job {job_id} ready for device assignment'"
+    - command: "echo '🎯 Job {job_id} ready for device assignment'"
   ARMED:
     - command: "echo '🎯 Job {job_id} armed - starting camera recording'"
   PLOTTING:
