Enhance recovery system with interrupt detection and automatic job prioritization
Add intelligent interrupt detection to identify jobs that exceed estimated duration, and streamline resume workflow by automatically prioritizing resumed jobs at the front of queue.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,9 +11,9 @@ optimization:
   fallback_preset: "default"
 
 recovery:
-  enabled: true
-  auto_resume: false
-  max_retries: 3
+  interrupt_grace_minutes: 5
+  auto_detect_enabled: true
+  max_resume_attempts: 3
 
 logging:
   level: "INFO"
