feat: Add configurable penlift support for brushless servos
- Add penlift setting to DeviceCfg with default value 1 (standard AxiDraw)
- Update servo test command with --penlift option to override config
- Modify AxiDrawManager.cycle_pen() to accept configurable penlift
- Update create_manager() to use config defaults for penlift
- Improve servo and timing tests with timeout handling and better error messages
- Add packaging/*.tar.* to gitignore to exclude build artifacts

Co-authored-by: ploTTY Server <server@plotty.local>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 workspace: "$XDG_DATA_HOME/plotty/workspace"
 database: { url: "sqlite:///$XDG_DATA_HOME/plotty/plotty.db" }
 camera: { mode: ip, url: "", enabled: false, timelapse_fps: 1 }
-device: { preferred: "axidraw:auto", pause_ink_swatch: true }
+device: { preferred: "axidraw:auto", pause_ink_swatch: true, penlift: 1 }
 vpype:  { preset: default, presets_file: "config/vpype-presets.yaml" }
 paper: { default_size: A4, default_margin_mm: 10, default_orientation: portrait, require_one_per_session: true, track_usage: true, auto_detect_size: true }
 
