--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     branches: [ master, main ]
   release:
     types: [ published ]
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   test:
