--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,15 @@ jobs:
       - name: Create virtual environment
         run: uv venv
         
-      - name: Install dependencies
-        run: |
-          uv pip install -e ".[dev,vpype]"
-          # Install pytest-cov separately for coverage
-          uv pip install pytest-cov
-          # Install AxiDraw support for testing
-          bash scripts/install_pyaxidraw.sh
+       - name: Install dependencies
+         run: |
+           uv pip install -e ".[dev,vpype]"
+           # Install pytest-cov separately for coverage
+           uv pip install pytest-cov
+       
+       - name: Install AxiDraw support (Linux/macOS only)
+         if: runner.os != 'Windows'
+         run: bash scripts/install_pyaxidraw.sh
           
       - name: Run database migrations
         run: uv run alembic upgrade head
@@ -88,12 +90,11 @@ jobs:
           uv python install 3.12
           uv build --wheel
           
-      - name: Check package
-        run: |
-          uv python install 3.12
-          uv venv
-          . .venv/bin/activate
-          uv pip install dist/*.whl
+       - name: Check package
+         run: |
+           uv python install 3.12
+           uv venv
+           uv pip install dist/*.whl
           
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
